--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <title>
-    Title
+    dy0908-games
     </title>
   </head>
   <body>
     <h1>
-    欢迎来到dy0908的网站！
+    欢迎来到dy0908的网页！
     </h1>
   </body>
 </html>
