--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     dy0908-games
     </title>
   </head>
-  <img src="im0815街俯瞰(夜).jpg>
+  <img src="im0815街俯瞰(夜).jpg/>
   <body>
     <h1>
     欢迎来到dy0908的网页！
