--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <title>
     dy0908-games
     </title>
+    <link rel="stylesheet" type="text/css" href="css/test.css">
   </head>
-  <img src="FP001.jpg/>
   <body>
-    <h1>
-    欢迎来到dy0908的网页！
-    </h1>
+    <p>
+    Welcome!
+    </p>
+
   </body>
 </html>
