--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   <body>
     <p>
     Welcome!
-    </p>
+    </p><br/>
     <pa id="a">A</pa>
     <pa id="b">B</pa>
     <pa id="c">C</pa>
     <pa id="d">D</pa>
-
+    <embed height="0" width="0" src="bgm/bgm01.mp3" />
   </body>
 </html>
