--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     dy0908-games
     </title>
     <link rel="stylesheet" type="text/css" href="css/test.css">
+    <!--newjacascript-->
+    <script>
+      // alert("我是渣渣辉")
+      // alert("贪玩蓝月")
+      // alert("你素没有忘过的船新版本")
+    </script>
   </head>
   <body>
     <p>
