--- a/index.html
+++ b/index.html
@@ -10,12 +10,19 @@
       // alert("我是渣渣辉")
       // alert("贪玩蓝月")
       // alert("你素没有忘过的船新版本")
+      var name = window.prompt("username:")
+      function myFunction()
+          {
+              document.write(name);
+          }
+
     </script>
   </head>
   <body>
     <p>
-    Welcome!
-    </p><br/>
+    Welcome <script>name</script>
+      <button onclick="myFunction()">kick here</button>
+    </p><hr/>
     <pa id="a">A</pa>
     <pa id="b">B</pa>
     <pa id="c">C</pa>
