--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh">
   <head>
     <title>
     dy0908-games
@@ -28,8 +28,8 @@
     </script>
   </head>
   <body>
-    <p>
-    Welcome <script>showname()</script>
+    <p align="center">
+    Welchome!<script>showname()</script>
       <button onclick="changename()">kick here</button>
     </p><hr/>
     <pa id="a">A</pa>
