--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh">
   <head>
+    <meta charset="UTF-8">
     <title>
     dy0908-games
     </title>
@@ -19,7 +20,7 @@
           showname();
           }
       function iflegal(a) {
-          if(a == "123"){
+          if(a = "123"){
               a = "not a real name.";
           }
           return a;
