--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="zh" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html"
+      xmlns="http://www.w3.org/1999/html">
   <head>
     <meta charset="UTF-8">
     <title>
@@ -11,7 +12,7 @@
       var name = window.prompt("username:")
       function showname()
           {
-              document.write(name);
+              document.getElementById("name").innerHTML = name;
           }
       function changename()
           {
@@ -29,14 +30,36 @@
     </script>
   </head>
   <body>
+  <div>
     <p align="center">
-    Welchome!<script>showname()</script>
+      Welchome! <a id="name"></a><script>showname()</script>
       <button onclick="changename()">kick here</button>
-    </p><hr/>
-    <pa id="a">A</pa>
-    <pa id="b">B</pa>
-    <pa id="c">C</pa>
-    <pa id="d">D</pa>
+    </p>    <hr/>
+    <div id="a" align="center">
+      <svg width="100%" height="100%" version="1.1" xmlns="http://www.w3.org/2000/svg" >
+
+        <circle cx="100" cy="50" r="40" stroke="black" stroke-width="2" fill="blue"/>
+
+      </svg></div>
+    <div id="b" align="center">
+      <svg width="100%" height="100%" version="1.1" xmlns="http://www.w3.org/2000/svg" >
+
+        <circle cx="100" cy="50" r="40" stroke="black" stroke-width="2" fill="blue"/>
+
+      </svg></div>
+    <div id="c" align="center">
+      <svg width="100%" height="100%" version="1.1" xmlns="http://www.w3.org/2000/svg" >
+
+        <circle cx="100" cy="50" r="40" stroke="black" stroke-width="2" fill="blue"/>
+
+      </svg></div>
+    <div id="d" align="center">
+      <svg width="100%" height="100%" version="1.1" xmlns="http://www.w3.org/2000/svg" >
+
+        <circle cx="100" cy="50" r="40" stroke="black" stroke-width="2" fill="blue"/>
+
+      </svg></div>
     <embed height="0" width="0" src="bgm/bgm01.mp3" />
+ </div>
   </body>
 </html>
