--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>
     dy0908-games
     </title>
-    <link rel="stylesheet" type="text/css" href="css/test.css">
+    <link rel="stylesheet" type="text/css" href="css/test1.css">
     <!--newjacascript-->
     <script>
       var name = window.prompt("username:")
@@ -29,37 +29,37 @@
 
     </script>
   </head>
-  <body>
-  <div>
-    <p align="center">
+  <body  style="background-image: url(./jpg/test1.jpg);background-size: 100% 100%;height: 100%">
+  <div id="center">
+    <p>
       Welchome! <a id="name"></a><script>showname()</script>
       <button onclick="changename()">kick here</button>
     </p>    <hr/>
-    <div id="a" align="center">
-      <svg width="100%" height="100%" version="1.1" xmlns="http://www.w3.org/2000/svg" >
-
-        <circle cx="100" cy="50" r="40" stroke="black" stroke-width="2" fill="blue"/>
-
-      </svg></div>
-    <div id="b" align="center">
-      <svg width="100%" height="100%" version="1.1" xmlns="http://www.w3.org/2000/svg" >
-
-        <circle cx="100" cy="50" r="40" stroke="black" stroke-width="2" fill="blue"/>
-
-      </svg></div>
-    <div id="c" align="center">
-      <svg width="100%" height="100%" version="1.1" xmlns="http://www.w3.org/2000/svg" >
-
-        <circle cx="100" cy="50" r="40" stroke="black" stroke-width="2" fill="blue"/>
-
-      </svg></div>
-    <div id="d" align="center">
-      <svg width="100%" height="100%" version="1.1" xmlns="http://www.w3.org/2000/svg" >
-
-        <circle cx="100" cy="50" r="40" stroke="black" stroke-width="2" fill="blue"/>
-
-      </svg></div>
     <embed height="0" width="0" src="bgm/bgm01.mp3" />
- </div>
+  </div>
+    <div id="a">
+      <svg width="100%" height="100%" version="1.1" xmlns="http://www.w3.org/2000/svg" >
+
+        <circle cx="50%" cy="50" r="40" stroke="black" stroke-width="2" fill="blue"/>
+
+      </svg></div>
+    <div id="b">
+      <svg width="100%" height="100%" version="1.1" xmlns="http://www.w3.org/2000/svg" >
+
+        <circle cx="50%" cy="50" r="40" stroke="black" stroke-width="2" fill="blue"/>
+
+      </svg></div>
+    <div id="c">
+      <svg width="100%" height="100%" version="1.1" xmlns="http://www.w3.org/2000/svg" >
+
+        <circle cx="50%" cy="50" r="40" stroke="black" stroke-width="2" fill="blue"/>
+
+      </svg></div>
+    <div id="d">
+      <svg width="100%" height="100%" version="1.1" xmlns="http://www.w3.org/2000/svg" >
+
+        <circle cx="50%" cy="50" r="40" stroke="black" stroke-width="2" fill="blue"/>
+
+      </svg></div>
   </body>
 </html>
