--- a/index.html
+++ b/index.html
@@ -39,27 +39,19 @@
   </div>
     <div id="a">
       <svg width="100%" height="100%" version="1.1" xmlns="http://www.w3.org/2000/svg" >
-
         <circle cx="50%" cy="50" r="40" stroke="black" stroke-width="2" fill="blue"/>
-
       </svg></div>
     <div id="b">
       <svg width="100%" height="100%" version="1.1" xmlns="http://www.w3.org/2000/svg" >
-
         <circle cx="50%" cy="50" r="40" stroke="black" stroke-width="2" fill="blue"/>
-
       </svg></div>
     <div id="c">
       <svg width="100%" height="100%" version="1.1" xmlns="http://www.w3.org/2000/svg" >
-
         <circle cx="50%" cy="50" r="40" stroke="black" stroke-width="2" fill="blue"/>
-
       </svg></div>
     <div id="d">
-      <svg width="100%" height="100%" version="1.1" xmlns="http://www.w3.org/2000/svg" >
-
+      <svg width="100%" height="100%" version="1.1" xmlns="http://www.w3.org/2000/svg" >\
         <circle cx="50%" cy="50" r="40" stroke="black" stroke-width="2" fill="blue"/>
-
       </svg></div>
   </body>
 </html>
