--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html"
-      xmlns="http://www.w3.org/1999/html">
+<html lang="zh" xmlns="http://www.w3.org/1999/html" >
   <head>
     <meta charset="UTF-8">
     <title>
@@ -15,7 +14,7 @@
               document.getElementById("name").innerHTML = name;
           }
       function changename()
-          {
+      {
           name = window.prompt("new username:");
           name = iflegal(name);
           showname();
@@ -29,27 +28,27 @@
 
     </script>
   </head>
-  <body  style="background-image: url(./jpg/test1.jpg);background-size: 100% 100%;height: 100%">
-  <div id="center">
+  <body>
+   <div id ="center">
     <p>
       Welchome! <a id="name"></a><script>showname()</script>
       <button onclick="changename()">kick here</button>
     </p>    <hr/>
     <embed height="0" width="0" src="bgm/bgm01.mp3" />
   </div>
-    <div id="a">
+    <div class="cycle" id="a">
       <svg width="100%" height="100%" version="1.1" xmlns="http://www.w3.org/2000/svg" >
         <circle cx="50%" cy="50" r="40" stroke="black" stroke-width="2" fill="blue"/>
       </svg></div>
-    <div id="b">
+    <div class="cycle" id="b">
       <svg width="100%" height="100%" version="1.1" xmlns="http://www.w3.org/2000/svg" >
         <circle cx="50%" cy="50" r="40" stroke="black" stroke-width="2" fill="blue"/>
       </svg></div>
-    <div id="c">
+    <div class="cycle" id="c">
       <svg width="100%" height="100%" version="1.1" xmlns="http://www.w3.org/2000/svg" >
         <circle cx="50%" cy="50" r="40" stroke="black" stroke-width="2" fill="blue"/>
       </svg></div>
-    <div id="d">
+    <div class="cycle" id="d">
       <svg width="100%" height="100%" version="1.1" xmlns="http://www.w3.org/2000/svg" >\
         <circle cx="50%" cy="50" r="40" stroke="black" stroke-width="2" fill="blue"/>
       </svg></div>
