--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh" xmlns="http://www.w3.org/1999/html" >
+<html lang="zh" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
   <head>
     <meta charset="UTF-8">
     <title>
@@ -52,5 +52,13 @@
       <svg width="100%" height="100%" version="1.1" xmlns="http://www.w3.org/2000/svg" >\
         <circle cx="50%" cy="50" r="40" stroke="black" stroke-width="2" fill="blue"/>
       </svg></div>
+  <div style="height: 100%;width: 100%;background-color: aqua;float: left;margin: 5px;padding: 15px;">
+    <p align="left">
+      猜答案---->
+    </p>
+    <a href="answer.html">
+      <img src="jpg/test1.jpg">
+    </a>
+  </div>
   </body>
 </html>
